--- a/project1/index.html
+++ b/project1/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Condensed" />
 <html>
 <head>
+<Title> Ankita Tank About me </Title>
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu+Condensed"/>
+
+
 <style>
 h1 
 {
@@ -9,15 +12,12 @@ h1
     text-align:center;
     font-family: "Ubuntu Condensed";
 }
-
 .list 
 {
     color:purple;
     font-family: "Ubuntu Condensed";
         font-size:20px;
             margin-left: 25%;
-
-
 }
 .food
 {
@@ -30,14 +30,13 @@ h1
 {
     margin-left: 33%;
     font-family: "Ubuntu Condensed";
-
 }
 </style>
-</head>
+
 <body style="background-color:black;">
     
 <h1> Ankita Tank </h1>
-<img src="mypicture.jpg" alt="Ankita Tank" width="32%"  height="32%" class="pic">
+<img src="mypicture.jpg" alt="Ankita Tank" width="300"  height="300" class="pic">
 
 <p class="food"> My Favourite Food </p>
 <ol class="list">
@@ -47,8 +46,6 @@ h1
 
 </ol>  
 
-
 </body>
+
 </html>
-
-
