--- a/project2/index.html
+++ b/project2/index.html
@@ -300,22 +300,22 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="home1.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
+        <p><strong>Mono Color</strong></p>
+        <p>Theme Scheme Designed Interior.</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="home2.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
+        <p><strong>Pent-House</strong></p>
+        <p>2 Floor condos.</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="home3.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
+        <p><strong>Family Living</strong></p>
+        <p>Family house which with all your prefered comfort.</p>
       </div>
     </div>
   </div><br>
@@ -327,18 +327,32 @@
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
+      <li data-target="#myCarousel" data-slide-to="3"></li>
     </ol>
 
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
+
+
       <div class="item active">
-        <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
+        <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe, Vice President, Comment Box</span>
+        </h4>
       </div>
+
+
       <div class="item">
-        <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span></h4>
+        <h4>"One word... WOW!!"<br><span>John Doe, Salesman, Rep Inc</span>
+        </h4>
       </div>
+
       <div class="item">
-        <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
+        <h4>"Life Changing impact..."<br><span>Miss Tank, Software Developer, ACCC</span>
+        </h4>
+      </div>
+
+      <div class="item">
+        <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing, Actor, FriendsAlot</span>
+        </h4>
       </div>
     </div>
 
