--- a/project2/index.html
+++ b/project2/index.html
@@ -62,13 +62,13 @@
   }
   .carousel-control.right, .carousel-control.left {
       background-image: none;
-      color: #f4511e;
+      color: #000000;
   }
   .carousel-indicators li {
-      border-color: #f4511e;
+      border-color: #000000;
   }
   .carousel-indicators li.active {
-      background-color: #f4511e;
+      background-color: #000000;
   }
   .item h4 {
       font-size: 19px;
@@ -80,8 +80,14 @@
   .item span {
       font-style: normal;
   }
+  .button-subs
+  {
+      color:#fff;
+      background-color: #007fa5;
+      border-color: #ffffff;
+  }
   .panel {
-      border: 1px solid #f4511e;
+      border: 1px solid #000000;
       border-radius:0 !important;
       transition: box-shadow 0.5s;
   }
@@ -95,7 +101,7 @@
   }
   .panel-heading {
       color: #fff !important;
-      background-color: #f4511e !important;
+      background-color: #007fa5 !important;
       padding: 25px;
       border-bottom: 1px solid transparent;
       border-top-left-radius: 0px;
@@ -115,7 +121,7 @@
   }
   .panel-footer .btn {
       margin: 15px 0;
-      background-color: #f4511e;
+      background-color: #014f67;
       color: #fff;
   }
   .navbar {
@@ -221,7 +227,7 @@
     <div class="input-group">
       <input type="email" class="form-control" size="50" placeholder="Email Address" required>
       <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">Subscribe</button>
+        <button type="button" class="btn button-subs">Subscribe</button>
       </div>
     </div>
   </form>
@@ -262,25 +268,27 @@
   <h4>What we offer</h4>
   <br>
   <div class="row slideanim">
-    <div class="col-sm-4">
+
+    <div class="col-sm-3">
       <span class="glyphicon glyphicon-shopping-cart logo-small"></span>
       <h4> Choose Your Furniture </h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
-    <div class="col-sm-4">
+
+    <div class="col-sm-3">
       <span class="glyphicon glyphicon-picture logo-small"></span>
       <h4>Color Your Walls </h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
-    <div class="col-sm-4">
+
+    <div class="col-sm-3">
       <span class="glyphicon glyphicon-repeat logo-small"></span>
       <h4>Re-Construct </h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
-  </div>
-  <br><br>
-  <div class="row slideanim">
-    <div class="col-sm-4">
+
+
+    <div class="col-sm-3">
       <span class="glyphicon glyphicon-retweet logo-small"></span>
       <h4>Customise Old Products </h4>
       <p>Lorem ipsum dolor sit amet..</p>
@@ -299,21 +307,21 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="home1.jpg" alt="Paris" width="400" height="300">
+        <img src="home1.jpg" alt="Home Image 1" width="400" height="300">
         <p><strong>Mono Color</strong></p>
         <p>Theme Scheme Designed Interior.</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="home2.jpg" alt="New York" width="400" height="300">
+        <img src="home2.jpg" alt="Home Image 2" width="400" height="300">
         <p><strong>Pent-House</strong></p>
         <p>2 Floor condos.</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="home3.jpg" alt="San Francisco" width="400" height="300">
+        <img src="home3.jpg" alt="Home Image 3" width="400" height="300">
         <p><strong>Family Living</strong></p>
         <p>Family house which with all your prefered comfort.</p>
       </div>
